--- a/apps/core/templates/components/sidebar.html
+++ b/apps/core/templates/components/sidebar.html
@@ -25,7 +25,7 @@
                         <span class="nav-emoji">{{ lesson.title_ru|get_emoji }}</span>
                         <span class="nav-text">{{ lesson.title_ru|get_text_after_emoji }}</span>
                     </span>
-                    <span class="lang-content lang-ua">
+                    <span class="lang-content lang-uk">
                         <span class="nav-emoji">{{ lesson.title_uk|default:lesson.title_ru|get_emoji }}</span>
                         <span class="nav-text">{{ lesson.title_uk|default:lesson.title_ru|get_text_after_emoji }}</span>
                     </span>
