--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="{% static 'apple-touch-icon.png' %}">
     <link rel="stylesheet" href="{% static 'core/css/styles_unified.css' %}?v=5">
 </head>
-<body data-theme="light">
+<body data-theme="light" data-lang="{{ LANGUAGE_CODE }}">
 
     <!-- Mesh Background (visible in dark theme) -->
     <div class="mesh-background" aria-hidden="true"></div>
