--- a/apps/users/templates/users/signup.html
+++ b/apps/users/templates/users/signup.html
@@ -1,14 +1,16 @@
 {% extends "users/base_auth.html" %}
+{% load i18n %}
 
-{% block title %}Регистрация | Learn French{% endblock %}
-{% block auth_title %}Создать аккаунт{% endblock %}
+{% block title %}{% trans "Регистрация" %} | Learn French{% endblock %}
+{% block auth_title %}{% trans "Создать аккаунт" %}{% endblock %}
 
 {% block auth_form %}
+    <p class="auth-subtitle">{% trans "Присоединяйтесь к нам и начните учить французский сегодня!" %}</p>
     {{ form.as_p }}
 {% endblock %}
 
-{% block btn_text %}Зарегистрироваться{% endblock %}
+{% block btn_text %}{% trans "Зарегистрироваться" %}{% endblock %}
 
 {% block auth_footer %}
-    Уже есть аккаунт? <a href="{% url 'users:login' %}">Войти</a>
+    {% trans "Уже есть аккаунт?" %} <a href="{% url 'users:login' %}">{% trans "Войти" %}</a>
 {% endblock %}
